added posts route
