# swagger.yaml
@@ -100,6 +100,61 @@ paths:
         500:
           description: 'Server Error'
 
+  # Docs for posts route
+
+  # [GET] posts
+  /posts:
+    get:
+      tags:
+        - posts
+      summary: Find All Posts
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+    # [POST] posts
+    post:
+      tags:
+        - posts
+      summary: Add Post
+      parameters:
+        - name: body
+          in: body
+          description: post Data
+          required: true
+          schema:
+            $ref: '#/definitions/posts'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  # [GET] posts/author
+  /posts/author:
+    get:
+      tags:
+        - posts
+      summary: Find All Posts By Author
+      parameters:
+        - name: author
+          in: query
+          description: Author Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # definitions
 definitions:
   users:
@@ -114,6 +169,20 @@ definitions:
       password:
         type: string
         description: user Password
+
+  posts:
+    type: object
+    required:
+      - title
+      - content
+      - author
+    properties:
+      title:
+        type: string
+        description: post Title
+      content:
+        type: string
+        description: post Content
 
 schemes:
   - https
